# PluginCpp

./: CMakeLists.txt  LoadPlugin.cpp  README.md
XPluginIfrit/: Ifrit.cpp
XPluginOdin/: Odin.cpp  Odin.h
src/: CMakeLists.txt  LoadPlugin.cpp  README.md  XPlugin.h
src/XPluginIfrit/: CMakeLists.txt  Ifrit.cpp  Ifrit.h
src/XPluginOdin/: CMakeLists.txt  Odin.cpp  Odin.h
vc/PluginCppProject/: PluginCppProject.sln
vc/PluginCppProject/PluginCppProject/: PluginCppProject.vcxproj  PluginCppProject.vcxproj.filters
vc/PluginCppProject/PluginCppProject/Release/PluginCpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PluginCpp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
vc/PluginCppProject/Release/: PluginCpp.iobj  PluginCpp.ipdb  XPluginIfrit.exp  XPluginIfrit.iobj  XPluginIfrit.ipdb  XPluginIfrit.lib  XPluginOdin.exp  XPluginOdin.iobj  XPluginOdin.ipdb  XPluginOdin.lib
vc/PluginCppProject/XPluginIfrit/: XPluginIfrit.vcxproj  XPluginIfrit.vcxproj.filters
vc/PluginCppProject/XPluginIfrit/Release/XPluginIfrit.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  XPluginIfrit.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
vc/PluginCppProject/XPluginOdin/: XPluginOdin.vcxproj  XPluginOdin.vcxproj.filters
vc/PluginCppProject/XPluginOdin/Debug/: vc140.idb
vc/PluginCppProject/XPluginOdin/Debug/XPluginOdin.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  XPluginOdin.lastbuildstate
vc/PluginCppProject/XPluginOdin/Release/XPluginOdin.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+5 more)
